<resources>
    <string name="app_name">Quiz App</string>
    <string name="flag_quiz">Flag Quiz!</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">START</string>
    <string name="flag_image">Flag Image</string>
    <string name="submit">SUBMIT</string>
    <string name="result">RESULT</string>
    <string name="congratulations">Congratulations!</string>
    <string name="finish">FINISH</string>
    <string name="trophy_image">Trophy Image</string>
</resources>