<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@drawable/ic_bg"
    android:padding="20dp"
    tools:context=".ResultPageActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/result"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:src="@drawable/ic_trophy"
        android:contentDescription="@string/trophy_image" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/congratulations"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/tv_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:text="Pratham"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center"
        tools:text="Your Score is 0 out of 10"
        android:textSize="20sp"
        android:textColor="#d3d3d3"/>

    <Button
        android:id="@+id/btn_finish"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/finish"
        android:textSize="18sp"
        android:textColor="@color/design_default_color_primary_dark"
        android:textStyle="bold"
        android:backgroundTint="@color/white"/>



</LinearLayout>